# ipfs-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: cifar10_cv_train_gateway.py  cifar10_cv_train_ipfs.py  cifar10_exporter.py  cifar10_importer.py
ipfs_dataset/: exporter.py  ipfs_dataset.py  types.py  utils.py
